[package]
name = "sera-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC plugin registry and SDK for SERA"

[dependencies]
sera-types = { workspace = true }
sera-errors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
