[package]
name = "sera-queue"
version.workspace = true
edition.workspace = true

[dependencies]
sera-errors = { workspace = true }
sera-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
default = ["local"]
local = []
apalis = ["dep:sqlx"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
