[package]
name = "sera-runtime"
version.workspace = true
edition.workspace = true

[lib]
name = "sera_runtime"
path = "src/lib.rs"

[[bin]]
name = "sera-runtime"
path = "src/main.rs"

[dependencies]
sera-domain.workspace = true
sera-config.workspace = true
sera-db.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait = "0.1"
axum.workspace = true
uuid.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true

[dev-dependencies]
tempfile.workspace = true
