[package]
name = "sera-runtime"
version.workspace = true
edition.workspace = true

[lib]
name = "sera_runtime"
path = "src/lib.rs"

[[bin]]
name = "sera-runtime"
path = "src/main.rs"

[dependencies]
sera-types.workspace = true
sera-config.workspace = true
sera-errors.workspace = true
sera-db.workspace = true
sera-hooks.workspace = true
sera-hitl.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait = "0.1"
clap.workspace = true
atty = "0.2"
axum.workspace = true
uuid.workspace = true
chrono.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
regex.workspace = true
once_cell.workspace = true
tiktoken-rs.workspace = true

fs2 = "0.4"
rand.workspace = true

[features]
# Enable tests that require a live external provider (Ollama, OpenAI).
# Off by default so `cargo test` passes in hermetic CI.
integration = []

[dev-dependencies]
tempfile.workspace = true
