[package]
name = "sera-secrets"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sera-errors = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
